<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:elevation="2dp"
    android:id="@+id/cv"
    android:paddingBottom="3dp">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/articleImage"
                android:scaleType="centerCrop"
                android:elevation="2dp"
                android:contentDescription="@string/articleImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/author"
                android:id="@+id/author"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:paddingTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/title"
                android:id="@+id/title"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/description"
                android:id="@+id/description"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="start|bottom"
                android:textColor="@color/link" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                tools:text="@string/date"
                android:paddingEnd="2dp" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_save"
            tools:layout_editor_absoluteX="331dp"
            android:elevation="6dp"
            android:onClick="saveArticle"
            android:contentDescription="@string/saveArticle"
            android:autoMirrored="true" />
    </android.support.design.widget.CoordinatorLayout>

</android.support.v7.widget.CardView>